--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_ssh_connection_to_vmware_hypervisors.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_ssh_connection_to_vmware_hypervisors.adoc
@@ -27,8 +27,8 @@ echo Agent pid 12345;
 ----
 +
 If the connection is successful, the RHV conversion host is correctly configured for SSH transformation.
-
-You are ready to authenticate the RHV conversion host in CloudForms.
++
+You can authenticate the RHV conversion host in CloudForms.
 endif::rhv[]
 ifdef::osp[]
 +
@@ -41,7 +41,6 @@ ifdef::osp[]
 . Connect to the VMware hypervisor as `cloud-user` to validate the SSH connection.
 +
 If the connection is successful, the OpenStack Platform conversion host is correctly configured for SSH transformation.
-
-You are ready to xref:Migrating_the_infrastructure[migrate the infrastructure].
-
++
+You can xref:Migrating_the_infrastructure[migrate the infrastructure].
 endif::osp[]
