--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Upgrading_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Upgrading_conversion_hosts.adoc
@@ -12,4 +12,4 @@
 # cp /usr/share/ansible/roles/oVirt.ovirt-ansible-v2v-conversion-host/files/virt-v2v-wrapper.py /usr/bin/
 ----
 
-* OpenStack Platform: xref:Deploying_osp_conversion_hosts[Download the latest conversion appliance and deploy new conversion hosts].
+* OpenStack Platform: Download the latest conversion appliance and deploy new conversion hosts (see xref:Deploying_osp_conversion_hosts[Deploying the OpenStack Platform conversion host instances]).
