--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -53,9 +53,9 @@ Do not remove or change a provider before, during, or after migration because th
 .. In the left pane, in *Settings*, click menu:CFME Regions[Zones > Server] and select select the CloudForms machine.
 .. In the right pane, in the *Server* tab, set *SmartState Analysis* to *On* and click *Save*.
 
-.Deploying OpenStack Platform conversion host instances[[Deploying_osp_conversion_hosts]]
+.Deploying OpenStack Platform conversion hosts[[Deploying_osp_conversion_hosts]]
 
-The conversion host instances are deployed using the conversion host appliance. The number of conversion hosts you deploy depends on your migration size and infrastructure capabilities. See xref:Deciding_how_many_conversion_hosts_to_create[] for details.
+You download the conversion host appliance and use it to deploy the conversion host instances. The number of conversion hosts you deploy depends on your migration size and infrastructure capabilities. See xref:Deciding_how_many_conversion_hosts_to_create[] for details.
 
 . Navigate to link:https://access.redhat.com/downloads/[].
 . In the *A-Z* tab, click *Red Hat OpenStack Platform*.
@@ -66,7 +66,6 @@ The conversion host instances are deployed using the conversion host appliance. 
 ====
 Always download the latest version of the OpenStack Platform conversion appliance because it contains patches and fixes. The OpenStack Platform 14 conversion appliance can be used with both OpenStack Platform 13 and 14.
 ====
-
 . Upload the appliance to Glance storage.
 . Deploy the appliance as a conversion host instance, with the following resources:
 +
@@ -75,7 +74,7 @@ Always download the latest version of the OpenStack Platform conversion applianc
 ** `/tmp` (1 GB for each conversion)
 ** `/var/tmp` (1 GB for each conversion)
 ** `/var/logs` (5 GB)
-+
+
 [NOTE]
 ====
 For optimal performance:
