--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Virtual_machine_migration_failure.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Virtual_machine_migration_failure.adoc
@@ -17,16 +17,7 @@ A source virtual machine cannot migrate if it has any of the following condition
 
 * Virtual machine name duplicates an existing target virtual machine name.[[RHV_name_conflict]]
 
-* SSH transformation failure: If you are using SSSD with single sign-on, SSH fails for the `vdsm` account. Reinstall `ipa-client` without configuring the OpenSSH client:[[SSH_transformation_fails]]
-+
-[options="nowrap" subs="+quotes,verbatim"]
-----
-# ipa-client-install --uninstall
-# ipa-client-install --no-ssh
-----
-+
-This issue cannot be resolved by changing the configuration file because the file is restored during upgrades.
-
+* SSH transformation failure: If you are using SSSD with single sign-on, xref:Reinstalling_ipa_client[reinstall `ipa-client`] without the OpenSSH client. Otherwise, SSH fails for the vdsm user.
 
 *OpenStack Platform*[[OSP_VM_migration_failure]]
 
