--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -31,6 +31,16 @@ IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is n
 
 . Upload the VirtIO and Guest Tool image files to the ISO storage domain (see link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.3/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[Uploading the VirtIO and Guest Tool Image Files to an ISO Storage Domain] in the _Red Hat Virtualization Administration Guide_). The VirtIO file name must include the version number (+virtio-win-_version_.iso+). The Guest Tool is required for migrating Windows virtual machines.
 
+. If you are using SSSD with single sign-on, reinstall `ipa-client` without configuring the OpenSSH client:[[Reinstalling_ipa_client]]
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# ipa-client-install --uninstall
+# ipa-client-install --no-ssh
+----
++
+Otherwise, SSH will fail for the vdsm user. This issue cannot be resolved by modifying the configuration file because the file is restored during upgrades.
+
 .Configuring CloudForms
 
 . Install Red Hat CloudForms 4.7 on the Manager machine (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/installing_red_hat_cloudforms_on_red_hat_virtualization[Installing Red Hat CloudForms on Red Hat Virtualization]).
@@ -39,7 +49,7 @@ IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is n
 +
 [NOTE]
 ====
-Do not remove or change a provider (including refreshing RHV hosts) before, during, or after migration because these actions cause errors in the infrastructure mappings and migration plans.
+Do not remove or change a provider (including refreshing hosts) before, during, or after migration because these actions cause errors in the infrastructure mappings and migration plans.
 ====
 
 . Enable SmartState Analysis:
