--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
@@ -3,14 +3,8 @@
 
 Migrating the infrastructure involves the following key tasks:
 
-* Creating an xref:Creating_an_Infrastructure_Mapping[infrastructure mapping] to map the clusters, datastores, and networks of your source environment to your target environment
-
-* Creating and running a xref:Creating_and_running_a_migration_plan[migration plan]
-
-[NOTE]
-====
-You can xref:Canceling_a_migration_plan[cancel] a migration plan that is in progress and retry the migration in the future.
-====
+. xref:Creating_an_Infrastructure_Mapping[], to map the resources of your source environment to your target environment
+. xref:Creating_and_running_a_migration_plan[]
 
 include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
 include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
