--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
@@ -5,7 +5,7 @@ You can change the maximum number of concurrent migrations for conversion hosts 
 
 [IMPORTANT]
 ====
-For VDDK, the value of *Maximum concurrent migrations per conversion host* should not be greater than `20`. Otherwise, network overload will cause the migration to fail.
+For VDDK, the maximum concurrent migrations per conversion host should not be greater than `20`. Otherwise, network overload will cause the migration to fail.
 ====
 
 The provider setting has priority over the conversion host setting. For example, if the maximum number of concurrent migrations for a provider is `20` and for five conversion hosts, `3`, the maximum number of concurrent migrations is `20`, not `15` (`5` conversion hosts `x` `3` concurrent migrations).
@@ -14,14 +14,19 @@ An increase in the maximum number of concurrent migrations affects all migration
 
 A decrease maximum number of concurrent migrations affects only future migration plans. Migration plans that are in progress will use the limit that was set when the plan was created.
 
-Changing the maximum number of concurrent migrations for all conversion hosts::
+To change the maximum number of concurrent migrations:
 
+* For all conversion hosts:
++
 In CloudForms, click menu:Compute[Migration > Migration Settings] and select the new limit.
 
-The following commands are performed on the CLI of the CloudForms machine.
+[NOTE]
+====
+The following commands are performed on the command line of the CloudForms machine.
+====
 
-Changing the maximum number of concurrent migrations for a specific conversion host to `20`::
-
+* For a specific conversion host (`20` in this example):
++
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # vmdb
@@ -30,8 +35,8 @@ irb(main):001:0> $evm = MiqAeMethodService::MiqAeService.new(MiqAeEngine::MiqAeW
 irb(main):002:0> $evm.vmdb(:host).find_by(:name => "_host1.example.com_").custom_set("Max Transformation Runners", _20_)
 ----
 
-Changing the maximum number of concurrent migrations for a provider to `30`::
-
+* For a provider (`30` in this example):
++
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # vmdb
@@ -40,7 +45,7 @@ irb(main):001:0> $evm = MiqAeMethodService::MiqAeService.new(MiqAeEngine::MiqAeW
 irb(main):002:0> $evm.vmdb(:ext_management_system).find_by(:name => "_RHV_").custom_set("Max Transformation Runners", _30_)
 ----
 
-Getting the maximum number of concurrent migrations for a provider::
+To get the maximum number of concurrent migrations for a provider:
 
 [options="nowrap" subs="+quotes,verbatim"]
 ----
