combined target environment prep into single file

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_environment_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_environment_for_migration.adoc
@@ -3,29 +3,18 @@
 
 Preparing the environment for migration involves the following key steps:
 
-. xref:Preparing_the_vmware_source_environment[]
+. xref:Preparing_the_vmware_source_environment[Preparing the source environment], by extending the network and checking the virtual machines
 
-. Configuring the target storage and networks, installing software, and adding providers to CloudForms in the target environment:
+. Preparing the target environment by configuring the storage and networks, installing software, and configuring CloudForms:
 
-** xref:Preparing_the_rhv_target_environment[]
-** xref:Preparing_the_osp_target_environment[]
+* xref:Preparing_the_rhv_target_environment[Preparing the Red Hat Virtualization environment]
+* xref:Preparing_the_osp_target_environment[Preparing the OpenStack Platform environment] and xref:Deploying_osp_conversion_hosts[deploying the conversion hosts]
 
-. xref:Configuring_the_conversion_hosts[] in CloudForms
+. xref:Configuring_the_conversion_hosts[Configuring the conversion hosts in CloudForms]
 +
-.  xref:Changing_the_maximum_number_of_concurrent_migrations[(Optional) Changing the maximum number of concurrent migrations] for conversion hosts or providers for better performance and control of the migration process
+. Optionally, xref:Changing_the_maximum_number_of_concurrent_migrations[changing the maximum number of concurrent migrations] of conversion hosts or providers, for better performance and control of the migration process
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
-
-[id="Preparing_the_target_environment"]
-== Preparing the target environment
-
-Prepare your target environment for migration:
-
-** xref:Preparing_the_rhv_target_environment[]
-** xref:Preparing_the_osp_target_environment[]
-
-include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+2]
-include::modules/proc_Preparing_the_osp_target_environment.adoc[leveloffset=+2]
-
+include::modules/assembly_Preparing_the_target_environment.adoc[leveloffset=+1]
 include::modules/proc_Configuring_the_conversion_hosts.adoc[leveloffset=+1]
 include::modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
