--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
@@ -5,7 +5,7 @@
 
 Creating and running a migration plan involves the following key steps:
 
-. Checking the xref:Migration_plan_prerequisites_and_options[migration plan prerequisites and options] if any of the following conditions apply:
+. Checking whether the following xref:Migration_plan_prerequisites_and_options[migration plan prerequisites and options] apply:
 
 * You are migrating previously migrated virtual machines
 * You are migrating virtual machines running RHEL or other Linux operating system
@@ -15,16 +15,16 @@ Creating and running a migration plan involves the following key steps:
 
 . Running the migration plan, the last step of the *Create Migration Plan* wizard, with one of the following options:
 
-* *Save migration plan to run later*
-** xref:Scheduling_a_saved_migration_plan[Scheduling a saved migration plan]
+* Saving the migration plan and xref:Scheduling_a_saved_migration_plan[scheduling it] to run in the future
 
-* *Start migration immediately*
-** xref:Viewing_migration_plan_progress[Viewing a migration plan in progress]
-** xref:Canceling_a_migration_plan[Canceling a migration plan in progress]
+* Running the migration plan immedately
++
+You can xref:Viewing_migration_plan_progress[view a migration plan's progress] and xref:Canceling_a_migration_plan[cancel a migration plan].
 
-If external factors, such as network disruption, cause migration errors, see xref:Retrying_a_failed_migration_plan[].
-
-For other migration errors, see xref:Troubleshooting[].
+[NOTE]
+====
+If external factors (for example, network disruption) cause migration errors, you can xref:Retrying_a_failed_migration_plan[retry the migration plan]. For other migration errors, see xref:Troubleshooting[].
+====
 
 include::con_Migration_plan_options.adoc[leveloffset=+1]
 include::proc_Creating_a_migration_plan.adoc[leveloffset=+1]
