--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_options.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_options.adoc
@@ -3,13 +3,16 @@
 [id="Migration_plan_options"]
 = Migration plan prerequisites and options[[Migration_plan_prerequisites_and_options]]
 
-The following prerequisites and options may apply to your migration:
+Check whether the following prerequisites and options apply to your migration:
 
-* xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[], if the source virtual machines have been migrated in the past. Previously migrated virtual machines cannot be discovered by the migration plan because they are marked as `migrated` in the CloudForms database.
+You are migrating previously migrated virtual machines::
+See xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[]
 
-* xref:Creating_a_rhel_premigration_playbook[], to ensure that their IP addresses are accessible after migration
+You are migrating virtual machines running RHEL or other Linux operating system::
+See xref:Creating_a_rhel_premigration_playbook[]
 
-* xref:Adding_ansible_playbooks_to_cloudforms[], if you are using Ansible playbooks, including the `RHEL premigration` playbook, for premigration/postmigration tasks
+You are using Ansible playbooks for premigration/postmigration tasks::
+See xref:Adding_ansible_playbooks_to_cloudforms[]
 
 If these prerequisites and options do not apply, you can xref:Creating_a_migration_plan[create a migration plan].
 
