--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
@@ -1,7 +1,6 @@
 // Module included in the following assemblies:
-// proc_Preparing_the_rhv_target_environment.adoc
-// proc_Preparing_the_osp_target_environment.adoc
-* Check that your software versions are compatible:
+// proc_Preparing_the_target_environment.adoc
+* Compatible software versions:
 +
 .Software compatibility matrix
 [cols="2,1,1,1", options="header"]
