--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -3,31 +3,24 @@
 [id="Preparing_the_vmware_source_environment"]
 = Preparing the source environment
 
-Prepare the source environment's network and virtual machines for migration.
+Prepare the VMware source environment for migration:
 
-.Preparing the source network
-
-* Extend the VMware network to the target environment.
-
+. Extend the source network to the target environment.
++
 [IMPORTANT]
 ====
 The network configuration must not be changed in any way during the migration.
 
-Ensure that IP addresses, VLANs, and other network configurations are not changed before or after migration, because the conversion process preserves the source virtual machine MAC addresses.
+IP addresses, VLANs, and other network configurations should not be changed before or after migration because the conversion process preserves the source virtual machine MAC addresses.
 ====
 
-.Preparing the source virtual machines
+. Prepare the source virtual machines:
 
-. Unmount mounted ISO/CDROM disks.
-
-. Check that attached disks are not encrypted.
-
-. Check that each NIC has no more than one IPv4 and/or one IPv6 address.
-
-. Install VMware Tools to capture IP addresses (see link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[Installing VMware Tools] in the VMware documentation for instructions).
-
-. Check that source virtual machine names contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). *Special characters and spaces are not permitted.*
-
-. Red Hat Virtualization only: Check that source virtual machine names do not duplicate the names of existing RHV virtual machines.
-
-You are ready to prepare the target environment, xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[OpenStack Platform].
+* Install VMware Tools to capture IP addresses (see link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[] to download and install VMware Tools).
+* Unmount mounted ISO/CDROM disks.
+* Ensure that attached disks are not encrypted.
+* Ensure that each NIC has no more than one IPv4 and/or one IPv6 address.
+* Ensure that the virtual machine names contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). *Special characters and spaces are not permitted.*
+* Red Hat Virtualization only: Ensure that source virtual machine names do not duplicate the names of existing RHV virtual machines.
++
+You are ready to prepare the xref:Preparing_the_target_environment[target environment].
