--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_matrix.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_matrix.adoc
@@ -1,4 +1,4 @@
-. Check that your software versions are compatible:
+* Compatible software versions:
 +
 .Software compatibility matrix
 [cols="2,1,1", options="header"]
