--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/x_proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/x_proc_Preparing_the_rhv_target_environment.adoc
@@ -36,7 +36,7 @@ IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is n
 # ipa-client-install --no-ssh
 ----
 +
-Otherwise, SSH will fail for the vdsm user. This issue cannot be resolved by modifying the configuration file because the file is restored during upgrades.
+Otherwise, SSH will fail for the vdsm user. This issue cannot be resolved by modifying the configuration file because the file is restored during upgrades. See See link:https://bugzilla.redhat.com/show_bug.cgi?id=1544379[].
 
 . Install Red Hat CloudForms on the Manager machine:
 
