--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_target_environment.adoc
@@ -56,7 +56,7 @@ endif::rhv[]
 ifdef::osp[]
 == Installing and configuring OpenStack Platform
 
-. Install Red Hat OpenStack Platform 13 or later (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/director_installation_and_usage/[Red Hat OpenStack Platform Director Installation and Usage]).
+. Install Red Hat OpenStack Platform 13 or 14 (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/director_installation_and_usage/[Red Hat OpenStack Platform Director Installation and Usage]).
 
 . Create provider networks for the target instances to preserve the IP addresses of the source virtual machines (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/networking_guide/#create_a_network[Create a network] in the _Red Hat OpenStack Platform Networking Guide_).
 
@@ -81,22 +81,22 @@ Outbound traffic is enabled by default. If you have changed this setting, enable
 . Create flavors for the source virtual machines. If you do not create custom flavors, CloudForms will try to map each source virtual machine to an existing flavor.
 endif::osp[]
 
-== Configuring Cloudforms
+== Installing and configuring Cloudforms
 
 ifdef::rhv[]
 . Install Red Hat CloudForms 4.7 on the Manager machine (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/installing_red_hat_cloudforms_on_red_hat_virtualization[Installing Red Hat CloudForms on Red Hat Virtualization]).
 
-. Add VMware (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[Adding a VMware vCenter Provider]) and Red Hat Virtualization (see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_a_red_hat_virtualization_provider[Adding a Red Hat Virtualization Provider] in _Red Hat CloudForms: Managing Providers_) as providers.
+. Add VMware (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[Adding a VMware vCenter Provider] in _Red Hat CloudForms: Managing Providers_) and Red Hat Virtualization (see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_a_red_hat_virtualization_provider[Adding a Red Hat Virtualization Provider] in _Red Hat CloudForms: Managing Providers_) as providers.
 endif::rhv[]
 ifdef::osp[]
 . Install Red Hat CloudForms 4.7 (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Installing Red Hat CloudForms on Red Hat OpenStack Platform]).
 
-. Add VMware and OpenStack Platform as providers (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[Adding a VMware vCenter Provider] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[Adding an OpenStack Infrastructure Provider] in _Red Hat CloudForms: Managing Providers_).
+. Add VMware (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[Adding a VMware vCenter Provider] in _Red Hat CloudForms: Managing Providers_) and OpenStack Platform (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[Adding an OpenStack Infrastructure Provider] in _Red Hat CloudForms: Managing Providers_) as providers.
 endif::osp[]
 +
-[NOTE]
+[IMPORTANT]
 ====
-Do not remove or change a provider (including refreshing hosts) before, during, or after migration because these actions cause errors in the infrastructure mappings and migration plans.
+Removing or changing a provider before, during, or after migration will cause errors in the infrastructure mappings and migration plans.
 ====
 
 . Enable SmartState Analysis:
