--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -18,45 +18,45 @@ If you add or remove providers or provider objects from an infrastructure mappin
 . Click *Create Infrastructure Mapping*.
 . Perform the following procedures in the *Create Infrastructure Mapping* wizard:
 
+image:Creating_infrastructure_mapping.png[]
+
 [cols="1,3", options="header"]
 |===
 ^|Screen ^|Procedure
 
 |*General*
-.<a|. Enter the infrastructure mapping name and (optional) description.
-. Select the target provider from the drop-down list.
+.<a|. Enter the infrastructure mapping *Name* and (optional) *Description*.
+. Select the *Target Provider* from the drop-down list.
 . Click *Next*.
 
 |*Map Compute*
-.<a|. Select a source cluster and a target Red Hat Virtualization cluster or OpenStack Platform project.
+.<a|. Select a *Source Provider \ Datacenter \ Cluster* source cluster and a (RHV) *Target Provider \ Datacenter \ Cluster* or (OpenStack{nbsp}Platform) *Target Provider \ Project*.
 +
 *Red Hat Virtualization only:* A target cluster that does not contain a conversion host displays a warning icon (&#65279;image:warning.png[height=15px]&#65279;).
 . Click *Add Mapping*. You can map additional clusters.
 . Click *Next*.
 
 |*Map Storage*
-.<a|. Select a source cluster from the drop-down list.
-. Select a source datastore and a target Red Hat Virtualization datastore or OpenStack Platform volume type.
-+
-*OpenStack Platform only:* If the target datastore is missing, see xref:OpenStack_storage_not_detected[Storage not detected].)
+.<a|. Select a source cluster whose datastores you want to map.
+. Select a *Source Provider \ Datacenter \ Datastore* and (RHV) *Target Datastores* or
+(OpenStack{nbsp}Platform) *Target Provider \ Volume Type*. (If the OpenStack Platform volume type is missing, check that the `volume type` has been set. See xref:Infrastructure_mapping_errors[].)
 . Click *Add Mapping*. You can map additional datastores.
 . Click *Next*.
 
 |*Map Networks*
 .<a|. Select a source cluster from the drop-down list.
-. Select one or more source networks and a target network.
+. Select one or more from *Source Provider \ Datacenter \ Network* and a *Target Project \ Network*. (IMS supports both provider and tenant networks in OpenStack Platform.)
+
 . Click *Add Mapping*. You can map the networks of additional source clusters.
 . Click *Create*.
 
 |*Results*
 .<a|Click *Close*. Your infrastructure mapping is saved in menu:Compute[Migration > Infrastructure Mappings].
-
-If error messages appear, see xref:Infrastructure_mapping_errors[Infrastructure mapping errors].
 |===
 
-[IMPORTANT]
-====
-If you add or remove providers or provider objects from an infrastructure mapping, the mapping will have xref:Infrastructure_mapping_missing_resources[missing resource errors]. You must re-create the infrastructure mapping.
-====
+You can click an infrastructure mapping element to view its details:
 
-After you have created a successful infrastructure mapping, you can create a  xref:Creating_and_running_a_migration_plan[migration plan].
+.Infrastructure Mappings list
+image:Infra_mappings_list.png[]
+
+After you have created an infrastructure mapping, you can xref:Creating_and_running_a_migration_plan[create and run a migration plan].
