--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
@@ -17,7 +17,7 @@ Creating and running a migration plan involves the following key steps:
 
 * Saving the migration plan and xref:Scheduling_a_saved_migration_plan[scheduling it] to run in the future
 
-* Running the migration plan immedately
+* Running the migration plan immediately
 +
 You can xref:Viewing_migration_plan_progress[view a migration plan's progress] and xref:Canceling_a_migration_plan[cancel a migration plan].
 
