--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc
@@ -1,19 +1,34 @@
+// Module included in the following assemblies:
+// con_Migration_plan_options.adoc
 [id="Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan"]
 = Creating a CSV file to add virtual machines to the migration plan
 
-If you are migrating a large number of virtual machines, you can create a CSV file to add the source virtual machines to the migration plan. If you are xref:Remigrating_virtual_machines[re-migrating virtual machines], you must use a CSV file.
+If you are migrating virtual machines that were migrated in the past, you should create a CSV file to add the virtual machines to the migration plan, because the migration plan cannot discover them automatically.
 
-The virtual machine `Name` is mandatory. `Provider`, `Host`, and `Cluster` are optional, to differentiate identical virtual machine names in different environments.
+.Using a CSV file for large migrations (recommended)
+[NOTE]
+====
+If you are migrating a large number of virtual machines, using a CSV file to add the virtual machines is faster than selecting them from a list of discovered virtual machines.
 
-.Sample CSV file with `Name` (mandatory) and `Provider` (optional)
+For large OpenStack Platform migrations, you can use a CSV file to set the security groups and flavors, instead of setting them manually for each virtual machine in CloudForms.
+====
 
+.CSV file fields
+[cols="1,3", options="header"]
+|===
+|Field |Comments
+|`Name` |Virtual machine name. Required
+|`Host` |Optional. Only required if virtual machines have identical `Name` fields.
+|`Provider` |Optional. Only required if virtual machines with identical `Name` and `Host` fields.
+|`Security Group` |Optional, for OpenStack Platform only. The default is `Default`.
+|`Flavor` |Optional, for OpenStack Platform only. If you do not create flavors for the migration or if you leave this field blank, CloudForms tries to map the source virtual machines with existing flavors.
+|===
+
+.CSV file example
 [options="nowrap" subs="+quotes,verbatim"]
 ----
-Name,Provider
-vm01,vSphere3
-vm02,vSphere3
-vm03,vSphere3
-...
+Name,Host,Provider,Security Group,Flavor
+vm01,host1,vSphere3,webservers,x1.medium
+vm02,host1,vSphere3,webservers,x1.medium
+vm03,host1,vSphere3,webservers,x1.medium
 ----
-
-Duplicate virtual machines with no optional fields to differentiate them, or with duplicate optional fields, are marked with a red `x` and cannot be added to the migration plan.
